--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
   <header class="header">
     <div class="logo-wrapper">LOGO</div>
     <h1 class="header__title">Musician First</h1>
-    <div class="header__contact button">Contact</div>
+    <div class="header__contact button">
+      <a class="button-anchor">
+        Contact
+      </a>
+    </div>
   </header>
   <section class="main">
     <div class="main__wrapper">
       <div class="main__topbuttons">
-        <div class="button">Start</div>
-        <div class="button">Log in</div>
+        <div class="button">
+          <a class="button-anchor" href="filter1.html">
+            Start
+          </a>
+        </div>
+        <div class="button">
+          <a class="button-anchor">
+            Log in
+          </a>
+        </div>
       </div>
       <div class="main__video">
         <video src="video/MF Explainer Video.mp4" autoplay controls muted loop playsinline></video>
